--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-老道回家吃饭了
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<style type="text/css">
+		body{
+			background-color: skyblue;
+			background:url(../bgc.jpg) no-repeat;
+			background-size: 100% 100%;
+		}
+	</style>
+</head>
+<body>
+	<div>
+		
+	</div>
+</body>
+</html>
