--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<style type="text/css">
 		body{
 			background-color: skyblue;
-			background:url(../bgc.jpg) no-repeat;
-			background-size: 100% 100%;
+			background-image: url(./bgc.jpg);
+			background-repeat: no-repeat;
+			background-size: cover;
 		}
 	</style>
 </head>
