--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<style type="text/css">
-		body{
-			background-color: skyblue;
-			background-image: url(./bgc.jpg);
-			background-repeat: no-repeat;
-			background-size: cover;
-		}
-	</style>
-</head>
-<body>
-	<div>
-		
-	</div>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>waimai</title><link href=./static/css/app.c5417ef93d9965ecb44ff201417e0c31.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.bc1491675652627b0907.js></script><script type=text/javascript src=./static/js/vendor.632f6e6c2e4e6dec990f.js></script><script type=text/javascript src=./static/js/app.bfe3da7f63003ebcb0e3.js></script></body></html>
