--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>个人简历</title>
+	<title>gakki</title>
 	<style type="text/css">
-		body{
+		*{
+			margin: 0;
+			margin: 0;
+		}
+		html{
+			width: 100%;
+			height: 100%;
 			background:url(./gakki.jpg);
-			-webkit-background-size: cover;
+			-webkit-background-size:cover ;
 			background-size: cover;
 			background-repeat: no-repeat;
 		}
@@ -14,7 +20,6 @@
 </head>
 <body>
 	<div>
-		<img src="gakki.jpg">
 	</div>
 </body>
 </html>
