--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 	<meta charset="UTF-8">
 	<title>gakki</title>
 	<style type="text/css">
+		@media screen and (min-width: 375px) and (max-width:800px) {
+
+		}
 		*{
 			margin: 0;
 			margin: 0;
 		}
 		html{
-			width: 100%;
-			height: 100%;
+			background-color: skyblue;
 			background:url(./gakki.jpg);
 			-webkit-background-size:cover ;
 			background-size: cover;
