--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>gakki</title>
-	<style type="text/css">
-		@media screen and (min-width: 375px) and (max-width:800px) {
-
-		}
-		*{
-			margin: 0;
-			margin: 0;
-		}
-		html{
-			background-color: skyblue;
-			background:url(./gakki.jpg);
-			-webkit-background-size:cover ;
-			background-size: cover;
-			background-repeat: no-repeat;
-		}
-	</style>
-</head>
-<body>
-	<div>
-	</div>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>waimai</title><link href=./static/css/app.a6e069e623838a128df06d50b12477a6.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.d974329f6cda6d71a3d9.js></script><script type=text/javascript src=./static/js/vendor.632f6e6c2e4e6dec990f.js></script><script type=text/javascript src=./static/js/app.33fd97022caf4c38f236.js></script></body></html>
