--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>shuofang</title><link href=./static/css/app.ae7467758e65edaae339e68efd69f4fc.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.001417ebbfb053e7ce88.js></script><script type=text/javascript src=./static/js/vendor.b8a0b9ca6bb23ea9ed66.js></script><script type=text/javascript src=./static/js/app.09116d210a0015bf2a44.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Valar Morghulis</title>
+	<style type="text/css">
+		@media screen and (min-width: 600px) {
+			body{
+				background: url('./images/timg.jpg');
+				-webkit-background-size: cover;
+				background-size: cover;
+				background-repeat: no-repeat;
+			}
+		}		
+		@media screen and (max-width: 600px) {
+			body{
+				background: url('./images/timg-mini.jpg');
+				-webkit-background-size: cover;
+				background-size: cover;
+				background-repeat: no-repeat;
+			}
+		}
+	</style>
+</head>
+<body>
+</body>
+</html>
