--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Valar Morghulis</title>
 	<style type="text/css">
-		@media screen and (min-width: 1000px) {
+		/* @media screen and (min-width: 1000px) {
 			body{
 				background: url('./images/timg.jpg');
 				-webkit-background-size: cover;
@@ -20,9 +20,10 @@
 				background-size: cover;
 				background-repeat: no-repeat;
 			}
-		}
+		} */
 	</style>
 </head>
 <body>
+	<a href="http://www.css88.com/doc/webpack/">webpack</a>
 </body>
 </html>
