--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Valar Morghulis</title>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<style type="text/css">
 		/* @media screen and (min-width: 1000px) {
 			body{
@@ -24,6 +32,8 @@
 	</style>
 </head>
 <body>
-	<a href="http://www.css88.com/doc/webpack/">webpack</a>
+	<button class="btn btn-info btn-block">
+			<a href="http://www.css88.com/doc/webpack/">webpack</a>
+	</button>
 </body>
 </html>
