--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<style type="text/css">
+	*{
+		padding: 0;
+		margin: 0;
+	}
+	a{
+		text-decoration: none;
+	}
 		/* @media screen and (min-width: 1000px) {
 			body{
 				background: url('./images/timg.jpg');
@@ -32,8 +39,12 @@
 	</style>
 </head>
 <body>
-	<button class="btn btn-info btn-block">
+	<h1>温故而知新</h1>
+	<button class="btn btn-info btn-block btn-lg">
 			<a href="http://www.css88.com/doc/webpack/">webpack</a>
+	</button>
+	<button class="btn btn-info btn-block btn-lg">
+			<a href="http://www.css88.com/doc/zeptojs_api/">zepto</a>
 	</button>
 </body>
 </html>
