--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 			<a href="http://www.css88.com/doc/webpack/">webpack</a>
 	</button>
 	<button class="btn btn-info btn-block btn-lg">
-			<a href="http://www.css88.com/doc/zeptojs_api/">zepto</a>
+			<a href="http://www.zeptojs.cn/">zepto</a>
+	</button>
+	<button class="btn btn-info btn-block btn-lg">
+			<a href="https://bingohuang.gitbooks.io/progit2/content/">git</a>
 	</button>
 </body>
 </html>
