--- a/index.html
+++ b/index.html
@@ -1,53 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Valar Morghulis</title>
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-	<style type="text/css">
-	*{
-		padding: 0;
-		margin: 0;
-	}
-	a{
-		text-decoration: none;
-	}
-		/* @media screen and (min-width: 1000px) {
-			body{
-				background: url('./images/timg.jpg');
-				-webkit-background-size: cover;
-				background-size: cover;
-				background-repeat: no-repeat;
-			}
-		}		
-		@media screen and (max-width: 1000px) {
-			body{
-				background: url('./images/timg-mini.jpg');
-				-webkit-background-size: cover;
-				background-size: cover;
-				background-repeat: no-repeat;
-			}
-		} */
-	</style>
-</head>
-<body>
-	<h1>温故而知新</h1>
-	<button class="btn btn-info btn-block btn-lg">
-			<a href="http://www.css88.com/doc/webpack/">webpack</a>
-	</button>
-	<button class="btn btn-info btn-block btn-lg">
-			<a href="http://www.zeptojs.cn/">zepto</a>
-	</button>
-	<button class="btn btn-info btn-block btn-lg">
-			<a href="https://bingohuang.gitbooks.io/progit2/content/">git</a>
-	</button>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>eban</title><link href=./static/css/app.3b3bd610a74fb45ec1e42a4caf278205.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.d3e06dc5a928c683b471.js></script><script type=text/javascript src=./static/js/vendor.66fc54f3fa426f47c938.js></script><script type=text/javascript src=./static/js/app.25e106beb22693f834c2.js></script></body></html>
